# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml
.github/workflows/: CI.yml  MyCI.yml
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_statuses_name.py
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_statuses_name.py
task_manager/task_manager/: settings.py
task_manager/tasks/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  home.html  login.html  logout.html
task_manager/templates/labels/: label_create.html  label_delete.html  label_update.html  labels_list.html
task_manager/templates/statuses/: status_create.html  status_delete.html  status_update.html  statuses_list.html
task_manager/templates/tasks/: task_create.html  task_delete.html  task_detail.html  task_update.html  tasks_list.html
task_manager/templates/users/: user_create.html  user_delete.html  user_update.html  users_list.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
tasks/: forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_tasks_options_alter_tasks_status.py
users/: forms.py  tests.py  urls.py  views.py
users/fixtures/: test_users.json
(+2 files in other folders)
