[project]
authors = [
    {name = "Anna Myshkina", email = "annet.myskina@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "Django task manager"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "django>=6.0.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["myproject"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "SIM", "TID", "ARG", "PTH"]
ignore = ["B008"]  # не проверять аргументы функций

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[dependency-groups]
dev = ["ruff>=0.14.14"]