[project]
authors = [
    {name = "Anna Myskina", email = "annet.myskina@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "Django task manager"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "django>=6.0.1",
    "gunicorn",
    "python-dotenv",
    "dj-database-url",
    "psycopg2-binary",
    "whitenoise",
    "django_bootstrap5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "C90", "B", "Q", "SIM", "TID", "ARG", "PTH"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

exclude = [
    "migrations/",
    "task_manager/settings.py",
]

[dependency-groups]
dev = ["ruff>=0.14.14"]
